--- a/src/app/board/doctor/detail-doctor/detail-doctor.component.html
+++ b/src/app/board/doctor/detail-doctor/detail-doctor.component.html
@@ -14,13 +14,13 @@
         </nav>
     </div>
     <div class="col-3">
-        <div class="row mt-1">
+     <!--    <div class="row mt-1">
             <button  [routerLink]="['/admin/doctors/affect' , doctor?._id]"  mat-raised-button class="ml-auto">
                 <mat-icon>screen_share</mat-icon>
                 Affecter
             </button>
            
-          </div>
+          </div> -->
     
       
 
