--- a/src/app/board/doctor/list-doctor/list-doctor.component.html
+++ b/src/app/board/doctor/list-doctor/list-doctor.component.html
@@ -77,13 +77,13 @@
 
                             <a (click)="open(doctor._id , !doctor.account_state , 1)"><i
                                     class="align-middle fas fa-fw fa-trash"></i></a>
-
+<!-- 
                             <a [routerLink]="['/admin/doctors/affect' , doctor._id]"><i
-                                    class="align-middle fas fa-fw fa-paper-plane  ml-1"></i></a>
-
+                                    class="align-middle fas fa-fw fa-paper-plane  ml-1"></i></a> -->
+<!-- 
                             <a [routerLink]="['/admin/doctors/admincheckform' , doctor._id]" >
                                 <i class="align-middle ml-1" ><mat-icon>screen_share</mat-icon></i>
-                            </a>
+                            </a> -->
                                    
                         </td>
                     </tr>
