--- a/src/app/board/dossier/list-dossier/list-dossier.component.html
+++ b/src/app/board/dossier/list-dossier/list-dossier.component.html
@@ -72,13 +72,13 @@
                      <!--    <div *ngIf="spinerLoading" class="spinner-border" role="status">
                             <span class="sr-only">Loading...</span>
                           </div> -->
-                          <div  class="col-sm">
+                     <!--      <div  class="col-sm">
                           <div *ngIf="spinerLoading"  class="spinner-border spinner-border-sm" role="status">
                             <span class="sr-only">Loading...</span>
                           </div>
                           <mat-icon *ngIf="!spinerLoading" (click)="openModal(dossier._id);getIdDossier(dossier._id)"  style="padding-top: 25%; cursor: pointer;">playlist_play</mat-icon>
 
-                        </div>
+                        </div> -->
                      
                       </div>
             
