--- a/src/app/board/forms/detail-form/detail-form.component.html
+++ b/src/app/board/forms/detail-form/detail-form.component.html
@@ -10,13 +10,13 @@
     </div>
    
     <div class="col-4">
-        <div class="row mt-1 w-100">
+     <!--    <div class="row mt-1 w-100">
             <button  [routerLink]="['/admin/forms/affect' , form?._id]"  mat-raised-button class="ml-auto">
                 <mat-icon>screen_share</mat-icon>
                <span *ngIf="screenWidth > 450">Affecter</span> 
             </button>
            
-          </div>
+          </div> -->
     
         <div class="row w-100 mt-2">
           <button class="ml-auto mt-1" (click)="openLock()" mat-raised-button>
