--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -3,8 +3,8 @@
         Statistiques de la Plateforme
     </h1>
     
-<!-- 
-    <button (click)="payment('166')">
+
+<!--     <button (click)="payment('166')">
         pay
     </button>
     <button (click)="payment('75')">
@@ -21,7 +21,7 @@
     </button>
     <button (click)="payment('20')">
         pay5
-    </button> -->
+    </button>  -->
 </div>
 
 <div class="row">
