--- a/src/app/companent/prix/prix.component.html
+++ b/src/app/companent/prix/prix.component.html
@@ -37,7 +37,7 @@
           </option>
         </select>
       </mat-form-field>
-    <mat-icon style="padding-right: 25px;cursor: pointer;" (click)="save()">done</mat-icon>
+   <!--  <mat-icon style="padding-right: 25px;cursor: pointer;" (click)="save()">done</mat-icon> -->
 </mat-dialog-content>
 <h1 *ngIf="validData" style="color: red;">Veuillez remplir toutes les sections du formulaire</h1>
 <mat-dialog-content [formGroup]="form2" > 
@@ -80,7 +80,7 @@
         </option>
       </select>
     </mat-form-field>
-    <mat-icon style="padding-right: 25px;cursor: pointer;" (click)="saveAn()">done</mat-icon>
+ <!--    <mat-icon style="padding-right: 25px;cursor: pointer;" (click)="saveAn()">done</mat-icon> -->
  
 
 </mat-dialog-content>
