--- a/src/app/board/forms/add-form/add-form.component.html
+++ b/src/app/board/forms/add-form/add-form.component.html
@@ -413,7 +413,7 @@
                                     <div  *ngFor="let op of section.questions[i].grille.scoreS; let o = index;">
                                         <div class="row">
 
-                                            <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " >
+                                            <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " disabled>
                                         
                                                 
                                                   
