--- a/src/app/board/forms/detail-form/detail-form.component.html
+++ b/src/app/board/forms/detail-form/detail-form.component.html
@@ -290,7 +290,7 @@
                                     <div  *ngFor="let op of section.questions[i].grille.options; let o = index;">
                                         <div class="row m-2">
                                             <div class="col">
-                                            <input  class="question-short-text-response" [(ngModel)]="op.title" placeholder="option">
+                                            <input  class="question-short-text-response" [(ngModel)]="op.title" placeholder="option" disabled>
                                         
                                         </div>
                                         <div class="col" style="width: 1%;">
@@ -312,12 +312,12 @@
                                     <div  *ngFor="let op of section.questions[i].grille.scoreS; let o = index;">
                                         <div class="row">
 
-                                            <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " >
+                                            <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " disabled>
                                         
                                                 
                                                   
-                                                <input  class="question-short-text-response" [(ngModel)]="op.title" placeholder="option">
-                                                <input  [(ngModel)]="op.score"  class="question-score" placeholder="0">
+                                                <input  class="question-short-text-response" [(ngModel)]="op.title" placeholder="option" >
+                                                <input  [(ngModel)]="op.score"  class="question-score" placeholder="0" disabled>
                                                 <mat-icon class="ico" style="margin-left: 16px;cursor: pointer;"
                                                 (click)="removeOptionGrille2(i, o,s)"
                                                  *ngIf="section.questions[i].grille.scoreS.length > 1"
@@ -526,7 +526,7 @@
                                     <div class="container">
                                         <div class="row">
                                           <div class="col">
-                                            <input  class="question-short-text-response" [(ngModel)]="section.questions[i].optionsSaint[o].text" style="padding-bottom: 5%;" placeholder="option">
+                                            <input  class="question-short-text-response" [(ngModel)]="section.questions[i].optionsSaint[o].text" style="padding-bottom: 5%;" placeholder="option" disabled>
                                    
                                           </div>
                                           <div class="col">
