--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper" >
  
-    <nav *ngIf="layout.toggler"  class="sidebar " >
-        <h1 class="sidebar-brand" href="index.html">
+    <nav *ngIf="layout.toggler"  class="sidebar " style="background: linear-gradient(#2c5085, #2c5085);">
+        <h1 class="sidebar-brand" href="index.html"style="background: linear-gradient(#153d77, #2c5085);">
             <svg>
                 <use xlink:href="#ion-ios-pulse-strong"></use>
             </svg>
@@ -118,11 +118,11 @@
             </ul>
         </div>
     </nav>
-    <div class="main">
-        <app-header></app-header>
+    <div class="main" >
+        <app-header ></app-header>
 
 
-        <main class="content">
+        <main class="content" >
             <div class="container-fluid">
 
                 <router-outlet></router-outlet>
