--- a/src/app/board/dossier/list-dossier/list-dossier.component.html
+++ b/src/app/board/dossier/list-dossier/list-dossier.component.html
@@ -45,7 +45,11 @@
         </div>
     </div>
 
-        
+    <div  *ngIf="allDosssier.length==0" class="text-center mt-5" style="width: 100%;height: 100%;padding-bottom: 15%;">   
+        <h1 class="header-title" style="color: transparent;padding-bottom: 15%;font-size: 0px;">A</h1>
+        <h1 class="header-title" style="color: red;padding-bottom: 15%;">AUCUN dossiers  </h1>
+    
+    </div>
     <div   *ngFor="let dossier of allDosssier | paginate: { itemsPerPage: 8, currentPage: page,totalItem:totalLength }" class="row" style="padding-bottom: 5%;"
     matTooltip="{{dossier.name}}"
     matTooltipPosition="above">
@@ -81,6 +85,7 @@
                         </div> -->
                      
                       </div>
+               
             
             </div>
    
