--- a/src/app/board/forms/list-forms/list-forms.component.css
+++ b/src/app/board/forms/list-forms/list-forms.component.css
@@ -14,7 +14,7 @@
 
 	height: 50px;
 
-	background-color: white;
+	background-color: transparent;
 
 	border-radius: 3px;
 
@@ -27,11 +27,8 @@
 }
 
 .box > i {
-
 	font-size: 20px;
-
 	color: #777;
-
 }
 
 .box > input{
@@ -169,4 +166,36 @@ div.displayed {
     .wrap-login100 {
       padding: 100px 15px 33px 15px;
     }
+  }
+
+
+
+  .container2 {
+    display: grid;
+ 
+    grid-gap: 0.5rem;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  @media screen and (min-width: 480px) {
+    .container2 {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+  
+  .text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    width: 100%;
+  }
+  
+  .button {
+     border-color: transparent;
+    background-color: transparent;
+    font-size: 1rem;
+    
   }
