--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -28,7 +28,7 @@
     <div class="col-lg-12  d-flex" >
         <div class="w-100">
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-4">
                     <div class="card" routerLink="/admin/doctors" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
@@ -55,7 +55,7 @@
                 </div>
 
                
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-4">
                     <div class="card" routerLink="/admin/patients" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
@@ -81,7 +81,7 @@
                     </div>
                
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+           <!--      <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
@@ -113,8 +113,8 @@
                         </div>
                     </div>
                
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                </div> -->
+                <div class="col-lg-4">
                     <div class="card" routerLink="/admin/forms" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
