update style button creation formulaire

--- a/src/app/board/forms/list-forms/list-forms.component.html
+++ b/src/app/board/forms/list-forms/list-forms.component.html
@@ -35,7 +35,7 @@
              </button>
             <button>
               <div >
-                <button class="button" routerLink="/admin/forms/new" mat-raised-button>Créer un nouveau formulaire</button>
+                <button class="button" routerLink="/admin/forms/new" mat-button>Créer un nouveau formulaire</button>
          
               </div>
              </button>
