--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -28,7 +28,7 @@
     <div class="col-lg-12  d-flex" >
         <div class="w-100">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" routerLink="/admin/doctors" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
@@ -55,7 +55,7 @@
                 </div>
 
                
-                <div class="col-lg-4">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" routerLink="/admin/patients" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
@@ -81,15 +81,27 @@
                     </div>
                
                 </div>
-           <!--      <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mt-0">
-                                    <h5 class="card-title">Formulaires Affecter</h5>
+                                    <h5 class="card-title">Achat</h5>
                                 </div>
-
-                                <div class="col-auto">
+                                <div class="row">
+                                    <div class="col mt-0">
+                                        <h5 class="card-title"></h5>
+                                    </div>
+    
+                                    <div class="col-auto">
+                                        <div class="avatar">
+                                            <div class="avatar-title rounded-circle bg-primary-dark text-center">
+                                                <i style="color: #ffffff;" class=" mr-2 fa fa-fw fa-credit-card" aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                           <!--      <div class="col-auto">
                                     <select id="gender" style="border-color: #2469ce!important;height: 41px;" (change)="getFormsbyId($event.target.value)">
                                         <option >
                                              Professionnel de Santé
@@ -99,8 +111,9 @@
                                                 {{doctor.name}} 
                                   
                                         </option>
-                                      </select>
-                                </div>
+                                      </select> 
+                                      <i style="color: #153d77;" class="align-middle mr-2 fa fa-fw fa-credit-card" aria-hidden="true"></i>
+                                </div> -->
                             </div>
                             <div *ngIf="!spinerFormulaireAff" class="spinner-border" role="status">
   
@@ -108,13 +121,13 @@
                             <h1 *ngIf="spinerFormulaireAff"  class="display-5 mt-2 mb-4">{{taille}}</h1>
                             <div class="mb-0">
                                 <span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i> </span>
-                                Nombres Formulaires Affecter
+                                Total des achat
                             </div>
                         </div>
                     </div>
                
-                </div> -->
-                <div class="col-lg-4">
+                </div> 
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" routerLink="/admin/forms" style="cursor: pointer;">
                         <div class="card-body">
                             <div class="row">
@@ -189,7 +202,7 @@
              </canvas>
         </div>
       </div>
-<!--       <div class="col-lg-6  d-flex">
+      <div class="col-lg-6  d-flex">
         <div class="card w-100">
             <select   (change)="makeFormulaireStatData($event.target.value)" style="width: 100px; margin-left: auto;margin-top: 12px;margin-right: 12px;">
               
@@ -207,7 +220,7 @@
                 [plugins]="lineChartPluginsF">
              </canvas>
         </div>
-      </div>  -->
+      </div>  
       <div class="col-lg-6  d-flex">
         <div class="card w-100">
             <select   (change)="makeFormulaireStatDatatAll($event.target.value)" style="width: 100px; margin-left: auto;margin-top: 12px;margin-right: 12px;">
