lodifier button liste form

--- a/src/app/board/forms/list-forms/list-forms.component.css
+++ b/src/app/board/forms/list-forms/list-forms.component.css
@@ -190,7 +190,7 @@ div.displayed {
     align-items: flex-start;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
-    width: 100%;
+    width: 290px;
   }
   
   .button {
