--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -82,7 +82,7 @@
                
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="card" style="cursor: pointer;">
+                    <div class="card" style="cursor: pointer;" routerLink="/admin/history">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mt-0">
@@ -212,7 +212,7 @@
             </select>
 
 
-            
+
             <canvas baseChart 
                 [datasets]="lineChartDataF" 
                 [labels]="lineChartLabelsF" 
