--- a/src/app/board/forms/add-form/add-form.component.html
+++ b/src/app/board/forms/add-form/add-form.component.html
@@ -796,16 +796,16 @@
        <section>
        
         <div class="example-button-row">
-            <button mat-button (click) = "getNumber('0',7,7,k,0)" color="primary">0</button>
-          <button mat-button (click) = "getNumber('1',7,7,k,0)" color="primary">1</button>
-          <button mat-button (click) = "getNumber('2',7,7,k,0)" color="primary">2</button>
-          <button mat-button (click) = "getNumber('3',7,7,k,0)" color="primary">3</button>
-          <button mat-button (click) = "getNumber('4',7,7,k,0)" color="primary">4</button><br>
-          <button mat-button (click) = "getNumber('5',7,7,k,0)" color="primary">5</button>
-          <button mat-button (click) = "getNumber('6',7,7,k,0)" color="primary">6</button>
-          <button mat-button (click) = "getNumber('7',7,7,k,0)" color="primary">7</button>
-          <button mat-button (click) = "getNumber('8',7,7,k,0)" color="primary">8</button>
-          <button mat-button (click) = "getNumber('9',7,7,k,0)" color="primary">9</button>
+            <button mat-button (click) = "getNumber(0,7,7,k,0)" color="primary">0</button>
+          <button mat-button (click) = "getNumber(1,7,7,k,0)" color="primary">1</button>
+          <button mat-button (click) = "getNumber(2,7,7,k,0)" color="primary">2</button>
+          <button mat-button (click) = "getNumber(3,7,7,k,0)" color="primary">3</button>
+          <button mat-button (click) = "getNumber(4,7,7,k,0)" color="primary">4</button><br>
+          <button mat-button (click) = "getNumber(5,7,7,k,0)" color="primary">5</button>
+          <button mat-button (click) = "getNumber(6,7,7,k,0)" color="primary">6</button>
+          <button mat-button (click) = "getNumber(7,7,7,k,0)" color="primary">7</button>
+          <button mat-button (click) = "getNumber(8,7,7,k,0)" color="primary">8</button>
+          <button mat-button (click) = "getNumber(9,7,7,k,0)" color="primary">9</button>
  
         </div>
       </section>
