delete type grille case a coche

--- a/src/app/board/forms/detail-form/detail-form.component.html
+++ b/src/app/board/forms/detail-form/detail-form.component.html
@@ -242,10 +242,10 @@
                                     <mat-icon aria-hidden="false" aria-label="Example home icon">apps</mat-icon>
                                     Grille de cases à cocher 2
                                 </mat-option>
-                                <mat-option (click)="section.questions[i].type = 'Grille de cases à cocher';">
+                             <!--    <mat-option (click)="section.questions[i].type = 'Grille de cases à cocher';">
                                     <mat-icon aria-hidden="false" aria-label="Example home icon">apps</mat-icon>
                                     Grille de cases à cocher
-                                </mat-option>
+                                </mat-option> -->
                                 <mat-option (click)="section.questions[i].type = 'Nomber de jours';">
                                     <mat-icon aria-hidden="false" aria-label="Example home icon">today</mat-icon>
                                     Nomber de jours
