--- a/src/app/board/forms/preview/preview.component.html
+++ b/src/app/board/forms/preview/preview.component.html
@@ -17,10 +17,10 @@
   
     <div class="col-3">
         <div class="row ">
-           <!--  <button  [routerLink]="['/admin/forms/affect' , form?._id]"  mat-raised-button class="ml-auto">
+           <button  [routerLink]="['/admin/forms/affect' , form?._id]"  mat-raised-button class="ml-auto">
                 <mat-icon>screen_share</mat-icon>
                <span *ngIf="screenWidth > 450">Affecter</span> 
-            </button> -->
+            </button> 
             <button class="ml-2 mt-1" (click)="open()" mat-raised-button>
                 <mat-icon>delete</mat-icon>
             </button>
